overflow-corrected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,8 +104,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow-x: hidden;
-  overflow-y: auto;
 }
 
 li {
